# embroidery-rust

./: .clippy.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: build-test.yml  lint.yml
downloader/: .gitignore  README.md  pyproject.toml  test.py
downloader/embroidery/downloader/: __main__.py
downloader/embroidery/downloader/embroideres/: __main__.py  parse.py
embroidery-lib/: Cargo.toml
embroidery-lib/src/: byte_utils.rs  collection.rs  colors.rs  enum_utils.rs  lib.rs  pattern.rs  stitch.rs  str_util.rs  transforms.rs  util.rs
embroidery-lib/src/errors/: mod.rs  read.rs  write.rs
embroidery-lib/src/format/: collection.rs  mod.rs  pattern.rs  traits.rs  utils.rs
embroidery-lib/src/pattern/: colors.rs  pattern.rs  thread.rs
formats/csv/: Cargo.toml
formats/csv/src/: lib.rs  read.rs  write.rs
formats/dst/: Cargo.toml
formats/dst/src/: lib.rs  read.rs  stitch_info.rs  write.rs
formats/hus/: Cargo.toml
formats/hus/src/: colors.rs  consts.rs  header.rs  lib.rs  mod.rs  read.rs  write.rs
formats/hus/tests/: hus.rs  lib.rs
formats/jef/: Cargo.toml
formats/jef/src/: colors.rs  header.rs  hoops.rs  lib.rs  read.rs
formats/svg/: Cargo.toml
formats/svg/src/: lib.rs  write.rs
formats/vf3/: Cargo.toml
formats/vf3/src/: lib.rs  read.rs
formats/vp3/: Cargo.toml  vf3.ksy
formats/vp3/src/: common.rs  lib.rs  read.rs  vf3.rs  vp3.rs
formats/vp3/tests/: vf3.rs  vp3.rs
formats/vp4/: Cargo.toml  vp4.ksy
formats/vp4/src/: header.rs
formats/vp4/tests/: vp4.rs
src/: error.rs  formats.rs  lib.rs  main.rs
src/format/: traits.rs
src/format/errors/: mod.rs  read.rs  std.rs  write.rs
src/formats/: dst.rs  errors.rs  mod.rs  traits.rs  utils.rs
src/formats/dst/: mod.rs  read.rs  stitch_info.rs  write.rs
src/formats/svg/: colors.rs  (+2 more)
src/pattern/: colors.rs  mod.rs  pattern.rs  stitch.rs  thread.rs
support/: DST.rst  heckdump.py
tests/: lib.rs
tests/dst/: Crown.DST  QFL04001.DST  QFL04002.DST  QFL04003.DST  QFL04004.DST  QFL04005.DST  Star Foil.DST  mod.rs  test_read.rs
tests/madeirausa.com/: README.md  burmi1.dst  christmas tree.dst  classic60-flowers.dst  dak002.dst  dontbug.dst  fs no 50(1).dst  hurricane_lantern.dst  madeira_tension_test.dst  matte anchor.dst  sscolorfast.dst  wlf0048.dst  wlf0049.dst
(+56 files in other folders)
