[package]
name = "embroidery-rust"
version = "0.1.0"
authors = ["Lee Symes <leesdolphin@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "embroidery-lib",
    "formats/dst",
    "formats/svg",
    "formats/hus",
]

[dependencies]
log = "^0.4"
simplelog = "^0.5.0"
embroidery-lib = { path = "./embroidery-lib" }
embroidery-fmt-dst = { path = "./formats/dst" }
embroidery-fmt-svg = { path = "./formats/svg" }
embroidery-fmt-hus = { path = "./formats/hus" }
embroidery-fmt-jef = { path = "./formats/jef" }
