[package]
name = "embroidery-rust"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

[workspace]
members = [
    "embroidery-lib",
    "formats/csv",
    "formats/dst",
    "formats/hus",
    "formats/jef",
    "formats/svg",
    "formats/vp3",
    "formats/vp4",
]

[dependencies]
failure = "^0.1"
log = "^0.4"
simplelog = "^0.5.0"
embroidery-lib = { path = "./embroidery-lib" }
embroidery-fmt-csv = { path = "./formats/csv" }
embroidery-fmt-dst = { path = "./formats/dst" }
embroidery-fmt-hus = { path = "./formats/hus" }
embroidery-fmt-jef = { path = "./formats/jef" }
embroidery-fmt-svg = { path = "./formats/svg" }
embroidery-fmt-vp3 = { path = "./formats/vp3" }
embroidery-fmt-vp4 = { path = "./formats/vp4" }
