[tool.poetry]
name = "embroidery.downloader"
version = "0.1.0"
description = ""
authors = ["Opal <code@opal.codes>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
click = "^7.0"
beautifulsoup4 = "^4.7"
lxml = "^4.3"
urlnormalizer = "^1.2"
requests_cache = "^0.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0",allows-prereleases = true}
isort = {version = "^4.3"}
flake8 = {version = "^3.7"}
betamax = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
